2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* make/custom/csb337.cfg: Use VFP floating point model.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* console/fbcons.c: Fix warnings.

2010-04-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* startup/bspstart.c, network/network.c: make irq data types
	consistent

2009-12-08	Fernando Nicodemos <fgnicodemos@terra.com.br>

	* console/font8x16.h, console/sed1356.c: Fix typos.

2009-12-04	Fernando Nicodemos <fgnicodemos@terra.com.br>

	* README, README.kit637_v6, console/sed1356_16bit.h, startup/memmap.c:
	Missing parts of previous commit.

2009-11-30	Fernando Nicodemos <fgnicodemos@terra.com.br>

	* Makefile.am, preinstall.am, console/fbcons.c, console/font8x16.h,
	console/sed1356.c, console/uarts.c, include/sed1356.h,
	startup/bspstart.c, startup/linkcmds.csb337, startup/linkcmds.csb637,
	startup/memmap.c, startup/umonsupp.c: Update to match development
	version.

2009-11-21	Fernando Nicodemos <fgnicodemos@terra.com.br>

	* Makefile.am, configure.ac, console/uarts.c: Add initial support for
	Kit637 version of CSB637.
	* README.kit637_v6, make/custom/kit637_v6.cfg: New files.

2009-11-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add RTEMS_BSP_LINKCMDS.
	* make/custom/csb637.cfg: Remove LDFLAGS. Remove RTEMS_LINKCMDS.
	* startup/linkcmds: Remove (Rename into linkcmds.csb337).
	* startup/linkcmds.csb337: New (Renamed from linkcmds).
	* Makefile.am: Rework linkcmds handling.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/csb337.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/csb337.cfg: New (relocated from /make/custom).
	* make/custom/csb637.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.
