@@ -16,6 +16,8 @@ if ENABLE_LCD
 include_HEADERS += include/sed1356.h
 endif
 
+include_bsp_HEADERS =
+
 if ENABLE_UMON
 include_umondir = $(includedir)/umon
 include_umon_HEADERS  = ../../shared/umon/cli.h
@@ -60,6 +62,14 @@ libbsp_a_SOURCES = ../../shared/bsplibc.c ../../shared/bsppost.c \
     ../../shared/gnatinstallhandler.c
 # console
 libbsp_a_SOURCES += ../../shared/console.c console/uarts.c
+# IRQ
+include_bsp_HEADERS += ../../shared/include/irq-generic.h \
+	../../shared/include/irq-info.h
+libbsp_a_SOURCES += ../../shared/src/irq-generic.c \
+	../../shared/src/irq-legacy.c \
+	../../shared/src/irq-info.c \
+	../../shared/src/irq-shell.c \
+	../../shared/src/irq-server.c
 if ENABLE_LCD
 libbsp_a_SOURCES += console/sed1356.c console/fbcons.c
 endif
