@@ -17,6 +17,7 @@
  */
 
 #include <bsp.h>
+#include <bsp/irq-generic.h>
 #include <at91rm9200.h>
 #include <at91rm9200_pmc.h>
 #include <at91rm9200_emac.h>
@@ -24,7 +25,6 @@
 #include <at91rm9200_usart.h>
 
 /* Function prototypes */
-extern void rtems_irq_mngt_init(void);
 extern void rtems_exception_init_mngt(void);
 void bsp_libc_init( void *, uint32_t, int );
 static void fix_mac_addr(void);
@@ -65,7 +65,9 @@ void bsp_start_default( void )
   /*
    * Init rtems interrupt management
    */
-  rtems_irq_mngt_init();
+  if (bsp_interrupt_initialize() != RTEMS_SUCCESSFUL) {
+    _CPU_Fatal_halt(0xe);
+  }
 
 } /* bsp_start */
 
